derive_tests/tests/compile_fail/len_equal_and_min_max_set.stderr
error: equal parameter cannot be set if max or min exist
 --> tests/compile_fail/len_equal_and_min_max_set.rs:5:32
  |
5 |     #[validate(length(min = 1, equal = 2))]
  |                                ^^^^^
